Commited Various Changes in different Files.

--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -15,10 +15,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/tv_ingredients"
             android:layout_margin="5dp"
-            android:textColor="#fffb01"
+            android:textColor="#ffff00"
             android:textAlignment="center"
             android:textSize="18sp"
-            android:background="#534e4e"
+            android:background="#5c5b5b"
             android:fontFamily="casual"
             android:textStyle="bold"
         />
@@ -27,9 +27,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/rv_steps"
         android:layout_margin="5dp"
-        ></android.support.v7.widget.RecyclerView>
+        />
 
 </LinearLayout>
