--- a/app/src/main/res/layout/activity_baking_details.xml
+++ b/app/src/main/res/layout/activity_baking_details.xml
@@ -10,7 +10,7 @@
 
 
    <FrameLayout
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_detail_fragment_container"
        android:layout_margin="5dp"
