--- a/app/src/main/res/layout/steps_list.xml
+++ b/app/src/main/res/layout/steps_list.xml
@@ -4,17 +4,17 @@
     android:orientation="vertical"
     android:background="#640922"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:id="@+id/tv_steps_description"
-        android:textColor="#fffb01"
+        android:textColor="#ffff00"
         android:textAlignment="center"
         android:textSize="18sp"
-        android:background="#534e4e"
+        android:background="#5c5b5b"
         android:fontFamily="casual"
         android:textStyle="bold"
         />
