--- a/app/src/main/res/layout-sw600dp/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_recipe_detail.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#640922"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,11 +26,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/rv_steps"
         android:layout_margin="5dp"
         />
-
-
 
 </LinearLayout>
