--- a/app/src/main/res/layout/activity_baking.xml
+++ b/app/src/main/res/layout/activity_baking.xml
@@ -6,17 +6,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#c10d3e"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.uplabdhisingh.bakingtime.BakingActivity">
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/recipe_container"
-       ></FrameLayout>
+       />
 
 </LinearLayout>
 
