--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -1,37 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#640922"
+    android:tag="recipeDetailFragment"
+    android:background="#c10d3e"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+     <!--   <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scrollbarStyle="insideInset"
+            android:clipToPadding="false"
+            android:isScrollContainer="false"
+            android:fillViewport="false"
+            android:scrollIndicators="top|bottom"
+            android:scrollbarAlwaysDrawVerticalTrack="false"
+            > -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_ingredients"
+                android:layout_marginBottom="1dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:textColor="#ffff00"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:background="#5c5b5b"
+                android:fontFamily="casual"
+                android:textStyle="bold"
+                />
+
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_ingredients"
-            android:layout_margin="5dp"
-            android:textColor="#ffff00"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:background="#5c5b5b"
-            android:fontFamily="casual"
-            android:textStyle="bold"
+            android:id="@+id/rv_steps"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             />
 
-    </ScrollView>
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rv_steps"
-        android:layout_margin="5dp"
-        />
-
-
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
