--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#640922"
+    android:background="#c10d3e"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -18,15 +18,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_recipe_title"
         android:layout_below="@id/iv_recipe_image"
-        android:textSize="32sp"
+        android:textSize="30sp"
         android:textColor="#fffb01"
         android:textStyle="bold"
         android:textAlignment="center"
         android:layout_marginBottom="10dp"
+        android:fontFamily="sans-serif-condensed"
+        android:textAllCaps="true"
         />
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="6dp"
         android:layout_below="@id/tv_recipe_title"
         android:background="#ffffff"/>
 
