--- a/app/src/main/res/layout/steps_list.xml
+++ b/app/src/main/res/layout/steps_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#640922"
+    android:background="#c10d3e"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
