--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -7,11 +7,12 @@
 
     <ImageView
         android:id="@+id/iv_recipe_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_alignParentTop="true"
+        android:src="@drawable/recipe"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/recipe" />
+        />
 
     <TextView
         android:layout_width="match_parent"
@@ -22,7 +23,9 @@
         android:textColor="#fffb01"
         android:textStyle="bold"
         android:textAlignment="center"
+        android:layout_margin="30dp"
         android:layout_marginBottom="10dp"
+        android:background="#5c5b5b"
         android:fontFamily="sans-serif-condensed"
         android:textAllCaps="true"
         />
